# notspot_sim_py

./: README.md
src/: sadadsads
src/notspot/: CMakeLists.txt  package.xml
src/notspot/launch/: run_robot_gazebo.launch  run_robot_gazebo_a.launch  run_robot_gazebo_only.launch  run_robot_gazebo_real.launch  run_robot_gazebo_spot.launch  run_robot_hardware.launch  run_robot_real.launch
src/notspot_controller/: CMakeLists.txt  package.xml
src/notspot_controller/launch/: robot_controller.launch  robot_controller_real.launch
src/notspot_controller/scripts/: robot_controller_gazebo.py  robot_controller_gazebo.py.org  robot_controller_real.py  robot_controller_servo.py
src/notspot_description/: CMakeLists.txt  README.md  package.xml
src/notspot_description/launch/: description.launch  view_urdf.launch
src/notspot_description/rviz/: urdf_viewer.rviz
src/notspot_description/urdf/: notspot.urdf  spot.urdf  spotmicroai.urdf  spotmicroai.urdf.xacro  stairs.urdf.xacro
src/notspot_description2/: CMakeLists.txt  package.xml
src/notspot_description2/urdf/: notspot.urdf
src/notspot_gazebo/config/: controllers.yaml  controllers2.yaml  notspot_controllers.yaml
src/notspot_joystick/: package.xml
src/notspot_lcd/: CMakeLists.txt  package.xml
src/notspot_lcd/scripts/: sm_lcd_driver.py
src/notspot_mpu6050/: CMakeLists.txt  LICENSE  README.md  package.xml
src/notspot_mpu6050_2/: CMakeLists.txt  package.xml
src/notspot_mpu9250/: CMakeLists.txt  package.xml
src/notspot_rgb/: CMakeLists.txt  package.xml
src/notspot_ultrasonic/: CMakeLists.txt  package.xml
(+38 files in other folders)
